# Jarvis-Portal

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  jptrel  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  federated-tumbling-bee.md
docs/design/: ARCHITECTURE.md
docs/development/: ADAPTER_AUTHORING.md  CLI.md  DEVELOPMENT.md  FORMAT_CATALOG.md  IMPROVEMENTS.md  JSON_FORMAT.md  TABLE_FORMATS.md  TESTING.md  WOLFRAM_FORMAT.md
docs/release/: RELEASE.md
examples/: README.md
examples/formats/csv/: README.md  adapter-spec.yaml  input.csv  jarvis-hep.yaml  output.csv
examples/formats/dat/: README.md  adapter-spec.yaml  jarvis-hep.yaml
examples/formats/file/: README.md  adapter-spec.yaml  input.txt  jarvis-hep.yaml
examples/formats/json/: README.md  adapter-spec.yaml  input.json  jarvis-hep.yaml  output.json
examples/formats/slha/: README.md  adapter-spec.yaml  input.slha  jarvis-hep.yaml  output.slha
examples/formats/tsv/: README.md  adapter-spec.yaml  input.tsv  jarvis-hep.yaml  output.tsv
examples/formats/wolfram/: README.md  adapter-spec.yaml  input.wl  jarvis-hep.yaml  output.wl
examples/formats/xslha/: README.md  adapter-spec.yaml  jarvis-hep.yaml  output.xslha
github.ci/logs_70271395733/: 0_test (3.11).txt  1_test (3.12).txt  2_test (3.13).txt  3_test (3.10).txt
github.ci/logs_70271395733/test (3.10)/: system.txt
github.ci/logs_70271395733/test (3.11)/: system.txt
github.ci/logs_70271395733/test (3.12)/: system.txt
github.ci/logs_70271395733/test (3.13)/: system.txt
src/jarvis_portal/: __init__.py  _version.py  builtins.py  cli.py  context.py  registry.py  wolframdict.py
src/jarvis_portal/adapters/: __init__.py  csv.py  dat.py  file.py  json.py  slha.py  tsv.py  wolfram.py  xslha.py
tests/: test_cli.py  test_file_adapter.py  test_format_examples.py  test_json_adapter.py  test_registry.py  test_table_adapters.py  test_wolfram_adapter.py  test_wolframdict.py
