[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Jarvis-Portal"
version = "0.1.0"
description = "IO adapter registry and format backends for the Jarvis ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Jarvis-Portal Developers" }
]
keywords = ["HEP", "physics", "IO", "Jarvis-HEP", "workflow"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = []

[project.optional-dependencies]
slha = [
  "pyslha>=3.2.5",
]
xslha = [
  "xslha>=1.0.0",
]
all = [
  "pyslha>=3.2.5",
  "xslha>=1.0.0",
]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "twine>=5.0.0",
]

[project.entry-points."jarvishep.io"]
json = "jarvis_portal.adapters.json:JsonAdapter"
file = "jarvis_portal.adapters.file:FileAdapter"
slha = "jarvis_portal.adapters.slha:SLHAAdapter"
xslha = "jarvis_portal.adapters.xslha:XSLHAAdapter"

[project.urls]
Homepage = "https://github.com/Pengxuan-Zhu-Phys/Jarvis-Portal"
Repository = "https://github.com/Pengxuan-Zhu-Phys/Jarvis-Portal"
Issues = "https://github.com/Pengxuan-Zhu-Phys/Jarvis-Portal/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jarvis_portal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
